removed duplicate into text

--- a/guides/alberta/onepager.html
+++ b/guides/alberta/onepager.html
@@ -107,8 +107,8 @@
 <li>Contributions to nomination contestants made after <span class="nowrap">March&nbsp;30, 2022</span> will no longer qualify for the political contributions tax credit</li>
 </ul>
    <h2 id="h-2">File on time to receive benefits on time</h2>
-		     <p>To make sure you get your payments on time, you (and your spouse or common-law partner) need to file your <a href="/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/5015-r.html"><span class="nowrap">2022 Income</span> Tax and Benefit Return</a>(s) <span class="nowrap">by April 30, 2023.</span> The <abbr title="Canada Revenue Agency">CRA</abbr> will use the information from your return(s) to calculate the payments you are entitled to get from this program.</p>
-			 <p><mark>This affects:</mark></p>
+		     <p>To make sure you get your payments on time, you (and your spouse or common-law partner) need to file your <a href="/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/5015-r.html"><span class="nowrap">2022 Income</span> Tax and Benefit Return</a>(s) <span class="nowrap">by April 30, 2023.</span> The <abbr title="Canada Revenue Agency">CRA</abbr> will use the information from your return(s) to calculate the payments you are entitled to get from this program<mark>:</mark></p>
+			
 			 <dl class="dl-horizontal">
 <dt>Alberta child and family benefit</dt><dd>
 <p>This benefit is a <span class="nowrap">non-taxable</span> amount paid to <span class="nowrap">lower-</span> and <span class="nowrap">middle-income</span> families with children under&nbsp;<span class="nowrap">18&nbsp;years</span> of age. This&nbsp;program is fully funded by the Province of Alberta. The annual amount is split into four payments and is paid separately from the <a href="/en/revenue-agency/services/forms-publications/publications/t4114/canada-child-benefit.html#cctb">Canada&nbsp;child benefit</a>.</p>
