--- a/subway/uht/file-return.html
+++ b/subway/uht/file-return.html
@@ -874,7 +874,15 @@ html:lang(fr) .cnjnctn-or:before {
         </ul>
     </nav>
 --> 
-    
+
+
+
+<ul class="pager">
+  <li class="next"><a href="https://test.canada.ca/cra-arc/subway/uht/pay-tax.html" rel="next">Pay the tax</a></li>
+</ul>
+
+
+	  
   </section>
   <div class="clearfix"></div>
   <div id="def-preFooter"> </div>
