fixed responsive coding

--- a/guides/alberta/onepager.html
+++ b/guides/alberta/onepager.html
@@ -117,7 +117,7 @@
 </dl>
 			    <h2 id="h-3">Get the necessary forms</h2>
 				<h3>Options</h3>
-	<ul class="list-unstyled cnjnctn-type-or cnjnctn-xs">
+	<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
   <li class="cnjnctn-col">
     <h4 class="mrgn-tp-sm text-muted"><mark>Using certified software<span class="wb-inv">: Option 1</span></mark></h4>
     <p><mark>Forms are automatically generated for you if you use <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-individuals/netfile-overview/certified-software-netfile-program.html">certified tax software</a></mark></p>
