--- a/guides/alberta/onepager.html
+++ b/guides/alberta/onepager.html
@@ -69,7 +69,7 @@
             <link href="https://design.canada.ca/css/beta/social-media.css" rel="stylesheet">
             <div class="provisional bg-cover row mrgn-bttm-lg" data-bgimg="https://media.gettyimages.com/id/184909919/photo/alberta-flag.jpg?s=612x612&w=gi&k=20&c=KrJSi6t5f2B6nsWopPa2VRWbFZzmig_zfB8nE1YaBDo=">
                <div class="container p-0 p-sm-3">
-                  <div class="well header-rwd brdr-0 brdr-rds-0  mrgn-tp-lg">
+                  <div class="well header-rwd brdr-0 brdr-rds-0  mrgn-tp-lg opct-90">
                      <h1 property="name" id="wb-cont" class="gc-thickline">Alberta: Personal income tax 2022</h1>
                      <p class="mrgn-tp-md"><mark>Alberta's personal income tax is administered by the Canada Revenue Agency (CRA).  Your Alberta tax return is submitted with your federal tax return.  CRA will process both.</mark></p>
                   </div>
