--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -1106,7 +1106,11 @@ margin-left: 38px;
             </ul>
         </nav>
     -->
+<ul class="pager">
+  <li class="next"><a href="https://test.canada.ca/cra-arc/subway/uht/file-return.html" rel="next">File the return</a></li>
+</ul>
 
+		 
 </section>
 
 
