--- a/subway/uht/when-file.html
+++ b/subway/uht/when-file.html
@@ -884,6 +884,12 @@ margin-left: 38px;
         </nav>
     -->
 
+<ul class="pager">
+  <li class="next"><a href="https://test.canada.ca/cra-arc/subway/uht/complete-return.html" rel="next">Complete the return</a></li>
+</ul>
+
+
+		 
 </section>
 
 
