added rescue link

--- a/guides/alberta/onepager.html
+++ b/guides/alberta/onepager.html
@@ -113,8 +113,10 @@
 <dt>Alberta child and family benefit</dt><dd>
 <p>This benefit is a <span class="nowrap">non-taxable</span> amount paid to <span class="nowrap">lower-</span> and <span class="nowrap">middle-income</span> families with children under&nbsp;<span class="nowrap">18&nbsp;years</span> of age. This&nbsp;program is fully funded by the Province of Alberta. The annual amount is split into four payments and is paid separately from the <a href="/en/revenue-agency/services/forms-publications/publications/t4114/canada-child-benefit.html#cctb">Canada&nbsp;child benefit</a>.</p>
 <p>You do not need to apply for the Alberta child and family benefit. The Canada Revenue <span class="nowrap">Agency (CRA)</span> will use the information from your <a href="/en/revenue-agency/services/forms-publications/forms/rc66.html">Form RC66, Canada Child Benefits Application</a>&nbsp;to determine if you are entitled to receive this benefit.</p>
+<p>For more information about the Alberta child and family benefit, go to&nbsp;<a href="/en/revenue-agency/services/child-family-benefits/provincial-territorial-programs/province-alberta.html">Province of Alberta</a> or <span class="nowrap">call&nbsp;<strong>1-800-959-2809</strong></span>.</p>
 </dd>
 </dl>
+
 			    <h2 id="h-3">Get the necessary forms</h2>
 				<h3>Options</h3>
 	<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
@@ -507,7 +509,7 @@ Common-law partner </summary>refers to a person who is not your spouse, but with
 		  </ol>
 				 <h2 id="h-5">Send CRA the tax return</h2>
 				 <p>To make sure you get your payments on time, you (and your spouse or common-law partner) need to file your <a href="/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/5015-r.html"><span class="nowrap">2022 Income</span> Tax and Benefit Return</a>(s) <span class="nowrap">by April 30, 2023.</span> The <abbr title="Canada Revenue Agency">CRA</abbr> will use the information from your return(s) to calculate the payments you are entitled to get from this program.</p>
-<p>For more information about the Alberta child and family benefit, go to&nbsp;<a href="/en/revenue-agency/services/child-family-benefits/provincial-territorial-programs/province-alberta.html">Province of Alberta</a> or <span class="nowrap">call&nbsp;<strong>1-800-959-2809</strong></span>.</p>
+<p><mark>Refer to: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/sending-a-tax-return.html">Send us your tax return</a></mark></p>
 			   
 			  <h2 id="h-6">Prior years</h2>
 			  <ul>
