--- a/payroll/calculate/payment/fees-other.html
+++ b/payroll/calculate/payment/fees-other.html
@@ -337,7 +337,7 @@
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col">
-    <h3 class="mrgn-tp-sm text-muted h4">Amount paid for a good<span class="wb-inv">: Option 1</span></h3>
+    <h3 class="mrgn-tp-sm text-muted h4"><span class="wb-inv">Option 1: </span>Generally, payment for a good is an amount paid for:</h3>
    
                      <ul class="fa-ul mrgn-bttm-lg">
                          <li><span class="fas fa-check fa-li text-success"></span> Tangible and movable property (for example: clothing, office equipment, machinery, tools, supplies)</li>
@@ -349,7 +349,7 @@
   </li>
 
  <li class="cnjnctn-col">
-    <h3 id="partex" class="mrgn-tp-sm text-muted h4">Amount paid for a service<span class="wb-inv">: Option 2</span></h3>
+    <h3 id="partex" class="mrgn-tp-sm text-muted h4"><span class="wb-inv">Option 2: </span>Generally, payment for a service is an amount paid for:</h3>
     
                       <ul class="fa-ul mrgn-bttm-lg">
                         <li><span class="fas fa-check fa-li text-success"></span> The actions of serving, helping or benefitting another (for example: legal advice, house cleaning, consulting services)</li>
@@ -366,14 +366,14 @@
 
 <details><summary>Example</summary>
 <h4>Situation 1 </h4>
-<p>Your business purchases a  pre-fabricated display which, uses a generic design meant to suit the needs of any business. The vendor sends their worker to deliver, assemble and install the display. As this display is a moveable, tangible object, this is considered to be a good.</p>
+<p>Your business purchases a pre-fabricated display from another business that delivers, assembles and installs the display. As this display is a movable and tangible object, produced for sale, it is considered to be a good.</p>
 
-<p>In this situation, this business has purchased goods and they would not need to report the payment using a T4A slip.</p>
+<p>In this situation, your business has made a payment to another business for a good and you would not need to report the payment using a T4A slip.</p>
 
 <h4>Situation 2</h4>
-<p>Your business contracts with another business to design  a display for your store. The design is customized for your promotional needs. The design is then painted on a pre-fabricated display you had previously purchased.  As the design you have commissioned is not a moveable, tangible object, this is considered to be a service. </p>
+<p>Your business pays another business to design a display for your store. The design is customized for your promotional needs. The design is then painted on a pre-fabricated display you had previously purchased. As the design you have commissioned is not a moveable, tangible object, it is considered to be a service. </p>
 
-<p>In this situation, you are acquiring a service and you would need to report the payment to the other business on a T4A slip.</p>
+<p>In this situation, your business has made a payment to another business for a service and you would need to report the payment to the other business on a T4A slip.</p>
 
 </details>
  </div>    
