--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -367,7 +367,7 @@
  <h4>Specific situations</h4>
 <dl class="dl-horizontal">
 <dt>No SIN</dt>
-<dd>Enter 9 zeros if you do not have the recipient's SIN. You still have to file their T4A slip without the SIN. </dd>
+<dd>Enter 9 zeros if you do not have the employee's SIN. You still have to file their T4 slip before the due date even if you cannot get a SIN from the recipient.  </dd>
 <dt>SIN beginning with a 9 and received a permanent SIN</dt>
 <dd><p>Enter the permanent SIN if the recipient had a SIN beginning with a 9 and later in the year received a permanent SIN.</p>
 <p> <strong>Do not </strong>prepare 2 T4A slips. </p>
