--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -292,18 +292,18 @@
                &quot;print&quot;: &quot;on&quot;, &quot;type&quot;: &quot;off&quot;}" type="button">Collapse all</button>
             </div>
    <h4>Identification and pre-numbered boxes</h4>
-   <li class="code-num">	<details><summary >Year <span class="label label-success">Good</span></summary>
+   <li class="code-num">	<details><summary >Year </summary>
             <p id="yr">Enter the 4 digits of the calendar year in which you made the payment to the employee.</p>
             </details>
 		</li>
 		<li class="code-num">
             <details>
-            <summary id="mplyr_nm">Employer's name <span class="label label-success">Good</span></summary>
+            <summary id="mplyr_nm">Employer's name </summary>
             <p>Enter your legal name, your operating or trading name (if it differs from your legal name) and address.</p>
             </details>
 </li>
 
-	<li class="code-num"><details> <summary>Employee's name and address <span class="label label-success">Good</span></summary>
+	<li class="code-num"><details> <summary>Employee's name and address </summary>
             <p id="mply_nm_ddrss">Enter all in capital letters the employee's last name followed by the employee's first name and initials.</p>
             <p>If the employee has more than one initial, enter the employee’s first name followed by the initials in the ‘First name’ space.</p>
             <p> <strong>Do not enter </strong>titles, such as Director, Mr., or Mrs. </p>
@@ -311,7 +311,7 @@
             </details>
 </li>
 
-	<li class="code-num"><details> <summary>Box 10 – Province of employment <span class="label label-info">Jeremiah</span></summary>
+	<li class="code-num"><details> <summary>Box 10 – Province of employment </summary>
             <p  id="bx_10">Enter the provincial or territorial abbreviation for the province or territory of employment. This is not always the province where the employer is located. </p>
             <details><summary>List of provinces and territories and their abbreviations</summary>
             <table class="table table-striped small table-condensed">
@@ -401,12 +401,12 @@
             </details>
 		    </li>
 	
-	<li class="code-num"> <details><summary >Box 12 – Social insurance number (SIN) <span class="label label-info">Jeremiah</span></summary>
+	<li class="code-num"> <details><summary >Box 12 – Social insurance number (SIN) </summary>
             <p id="bx_12">Enter the SIN provided by the employee.</p>
            <h4>Specific situations</h4>
 <dl class="dl-horizontal">
 <dt>No SIN</dt>
-<dd>Enter 9 zeros if you do not have the employee's SIN. You still have to file their T4 slip without the SIN. </dd>
+<dd>Enter 9 zeros if you do not have the employee's SIN. You still have to file their T4 slip before the due date even if you cannot get a SIN from your employee. </dd>
 <dt>SIN beginning with a 9 and received a permanent SIN</dt>
 <dd><p>Enter the permanent SIN if the employee had a SIN beginning with a 9 and later in the year received a permanent SIN.</p>
 <p> <strong>Do not </strong>prepare 2 T4 slips. </p>
@@ -838,7 +838,7 @@
             </details>
 </li>
 
-<li class="code-num"><details> <summary >Box 26 – CPP/QPP pensionable earnings</summary>
+<li class="code-num"><details> <summary >Box 26 – CPP/QPP pensionable earnings <span class="label label-danger">TO DO</span></summary>
  <p id="bx_26">Report the <strong>total </strong>amount of pensionable earnings using box 26. This is the amount you used to calculate your employee's <abbr title="Canada Pension Plan">CPP</abbr>/<abbr title="Quebec Pension Plan">QPP</abbr> contributions that you reported using <a href="#bx_16">box 16</a>, <a href="#bx_16a">box 16a</a>, <a href="#bx_17">box 17</a> and <a href="#bx_17a">box 17a</a>, up to the maximum pensionable earnings for the year.</p>
             <p>Report "0" if the employee or the self-employed worker had no pensionable earnings and you did not report an amount in boxes 16, 16a, 17 or 17a.</p>
 		<p>In many situations, boxes 14 and 26 will be the same amount.</p>
@@ -956,7 +956,7 @@
 </li>
 	
 	
-<li class="code-num"><details> <summary>Box 29 – Employment code</summary>
+<li class="code-num"><details> <summary>Box 29 – Employment code <span class="label label-danger">TO DO</span></summary>
             <p id="bx_29">Enter the appropriate employment code in box 29 if one of the following situations applies. Otherwise, leave it blank.</p>
 
   <details><summary>11 - Placement or employment agency workers</summary>
