--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -434,8 +434,10 @@
 <dl class="dl-horizontal">
 
 <dt><abbr title="Supplementary unemployment benefit plan">SUBP</abbr> payments</dt>
-<dd><p>Report payments you made for maternity, parental and compassionate care top ups under a supplementary unemployment benefit plan (<abbr title="Supplementary unemployment benefit plan">SUBP</abbr>), whether they are registered with Services Canada or not using box 14. </p> 
-<p><strong>Do not</strong> report other amounts that are not related to top ups using box 14, use the <a href="/cra-arc/payroll/file/t4aslip.html">T4A slip</a>.</p>
+<dd><p>Report payments you made under a supplementary unemployment benefit plan (<abbr title="Supplementary unemployment benefit plan">SUBP</abbr>), such as maternity, parental and compassionate care top ups that do not qualify as a SUBP under the Income Tax Act, whether they are registered with Services Canada or not using box 14.</p>
+
+<p><strong>Do not</strong> report any top-up amounts paid under a <abbr title="Supplementary unemployment benefit plan">SUBP</abbr> that <strong>qualifies</strong> as a <abbr title="Supplementary unemployment benefit plan">SUBP</abbr> under the Income Tax Act using box 14, use the <a href="/cra-arc/payroll/file/t4aslip.html">T4A slip</a>.</p>
+
 <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/subp.html">Payments from supplementary unemployment benefit plan (SUBP)</a></p>      
 </dd>
 
@@ -454,7 +456,7 @@
 	<li>13 - Barber or hairdresser, use <a href="#cd_83">code 83</a></li>
 	<li>16 - Detached employee – Social security agreement, and no other type of income is reported on the T4 slip</li>
 	<li>17 - Self-employed fishing income, use <a href="#cd_78">code 78</a>, <a href="#cd_79">code 79</a> or <a href="#cd_80">code 80</a></li>
-	<li>12, 13 or 17 - Worker who is registered, or entitled to be registered under the Indian Act, use <a href="#cd_88">code 88</a></li>
+	<li>12, 13 or 17 - Tax-exempt income paid to a worker who is registered, or entitled to be registered under the Indian Act, use <a href="#cd_88">code 88</a></li>
 	
 </ul>
 </dd>
@@ -462,9 +464,9 @@
 <dt>Retiring allowances</dt>
 <dd> <p><strong>Do not </strong>report retiring allowances using box 14:</p>
 <ul>
-	<li>use <a href="#cd_66">code 66</a> to report eligible retiring allowances using </li>
+	<li>use <a href="#cd_66">code 66</a> to report eligible retiring allowances </li>
 	<li>use <a href="#cd_67">code 67</a> to report non-eligible retiring allowances</li>
-	<li>use <a href="#cd_69">code 69</a> to report non-eligible retiring allowances paid to your employee who is registered, or entitled to be registered under the Indian Act using </li>
+	<li>use <a href="#cd_69">code 69</a> to report tax-exempt non-eligible retiring allowances paid to your employee who is registered, or entitled to be registered under the Indian Act </li>
 	
 </ul>
 </dd>
