--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -483,7 +483,7 @@
 </dd>
 
 <dt>Canadian Forces personnel and police officers</dt>
-<dd><p>Report the employment income, up to the maximum rate of pay earned by a lieutenant-colonel of the Canadian Armed Forces, using code box 14 <strong>and</strong> <a href="#cd_43">code 43</a>.</p></dd>
+<dd><p>Report the employment income using box 14 <strong>and</strong> <a href="#cd_43">code 43</a>. Only report the employment income up to the maximum rate of pay earned by a lieutenant-colonel of the Canadian Armed Forces using code 43.</p></dd>
 
 <dt>Employment commissions</dt>
 <dd><p>Report the employment income from employment commissions you paid to your employee who sold property or negotiated contracts for you using code box 14 <strong>and</strong> <a href="#cd_42">code 42</a>.</p>
@@ -492,12 +492,13 @@
 </dd>
 
 <dt>Emergency volunteers</dt>
-<dd><p>Report the taxable employment income ($1,000 or more) you paid to your employee who is an emergency volunteer (such as a firefighter, ambulance technician, or search and rescue volunteer) using box 14.</p>
+<dd><p>Report the taxable employment income you as a government, municipality, or public authority paid to your employee who is an emergency volunteer (such as a firefighter, ambulance technician, or search and rescue volunteer) using box 14</p>
 
-   <p>You must also report if the individual other than as a volunteer has the same or similar duties using box 14.</p>
+<p><strong>Do not </strong> report the tax-exempt amount (up to  $1,000) you paid to your employee who is an emergency volunteer using box 14, use code 87 <a href="#cd_87">code 87</a>.</p>
 
-<p><strong>Do not </strong>report the tax-exempt employment income (less than $1,000) you paid to your employee who is an emergency volunteer using box 14, use <a href="#cd_87">code 87</a>.</p>
-     
+<p>You must report the total amount using box 14 if you paid the individual other than as a volunteer for performing the same or similar duties.</p>
+
+   
  <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/emergency.html">Payments to emergency services volunteers</a></p>    
 </dd>
 
@@ -505,8 +506,8 @@
 <dd> <p id="trims">Report the rental payments you made to employees for the use of their own power saws or tree trimmers using box 14.</p>
        <p><strong>Do not </strong>reduce the amount reported in box 14 by the cost or value of saws, trimmers, parts, gasoline, or any other materials the employee supplies.</p></dd>
 
-<dt>Province of employment outside Canada - Detached employee</dt>
-<dd><strong>Do not </strong>report any amount using box 14 if you use employment code 16 in <a href="#bx_29">box 29</a> and no other type of income is reported on the T4 slip.</dd>
+<dt>Detached employee - Social security agreement</dt>
+<dd><strong>Do not </strong>report any amount using box 14 if you use employment code 16 in <a href="#bx_29">box 29</a> and no other type of income is reported on the T4 slip. You, as the employer, is paying <abbr title="Canada Pension Plan">CPP</abbr> on behalf of the detached employee.</dd>
 
 <dt>Employee salary overpayments</dt>
 <dd>Add situation</dd>
