--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -516,8 +516,8 @@
             </details>
 </li>
 		
-<li class="code-num"><details><summary>Box 16 – Employee's CPP contributions <span class="label label-info">Jeremiah</span></summary>
-	   <p id="bx_16">Report amounts you deducted for your employee's share of the Canada Pension Plan (<abbr title="Canada Pension Plan">CPP</abbr>) contributions using box 16 if you enter in <a href="#bx_10">box 10</a> that your employee worked in a province other than Quebec. If you report an amount in box 16, you have to report pensionable earnings using <a href="#bx_26">box 26</a>. </p>
+<li class="code-num"><details><summary>Box 16 – Employee's CPP contributions </summary>
+	   <p id="bx_16">Report amounts you deducted for your employee's share of the Canada Pension Plan (<abbr title="Canada Pension Plan">CPP</abbr>) contributions using box 16 if you enter in <a href="#bx_10">box 10</a> that your employee had a province of employment other than Quebec. If you report an amount in box 16, you have to report pensionable earnings using <a href="#bx_26">box 26</a>. </p>
 
             <p><strong>Do not </strong>report the employer's share of <abbr title="Canada Pension Plan">CPP</abbr> contributions on the T4 slip.</p>
         
@@ -532,11 +532,11 @@
      </dd>
 
 <dt><abbr title="Second Canada Pension Plan">CPP2</abbr> contributions</dt>
-<dd> <p><strong>Do not </strong>report any amount using box 16 if your employee has reached the first maximum contributions and you deducted <abbr title="Second Canada Pension Plan">CPP2</abbr> contributions from your employee, use <a href="#bx_16a">box 16a</a>.</p>
+<dd> <p><strong>Do not</strong> report <abbr title="Second Canada Pension Plan">CPP2</abbr> contributions using box 16, use <a href="#bx_16a">box 16a</a>.</p>
      </dd>
 
 <dt>Over deductions (overpayment)</dt>
-<dd><p>Report the total <abbr title="Canada Pension Plan">CPP</abbr> deductions using box 16 <strong>and</strong> the correct pensionable earnings using <a href="#bx_26">box 26</a> if you overdeducted <abbr title="Canada Pension Plan">CPP</abbr> contributions (overpayment) from your employee and <strong>did not reimburse them</strong>.</p>
+<dd><p>Report the <strong>total</strong> <abbr title="Canada Pension Plan">CPP</abbr> deductions using box 16 <strong>and</strong> the correct pensionable earnings using <a href="#bx_26">box 26</a> if you overdeducted <abbr title="Canada Pension Plan">CPP</abbr> contributions (overpayment) from your employee and <strong>did not reimburse them</strong>.</p>
             <p>Learn more if you over deducted <abbr title="Canada Pension Plan">CPP</abbr> contributions:</p> 
   <ul> <li><a href="/cra-arc/payroll/calculate/corrections/index.html">Make corrections before filing</a> if you reimbursed them</li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/file-information-returns-slip-summaries/make-corrections-after-filing/correct.html#h-1">Make corrections after filing</a> </li>
@@ -552,24 +552,17 @@
 <br>
         </ul>
   </dd>
-<dt>Salary deferral arrangements</dt>
-<dd><p>Report amounts you deducted from the participant's gross salary (including deferred amounts) while the person was working of the <abbr title="Canada Pension Plan">CPP</abbr> contributions using box 16. If you report an amount in box 16, you have to report pensionable earnings using <a href="#bx_26">box 26</a>.</p>
- <p><strong>Do not </strong>deduct <abbr title="Canada Pension Plan">CPP</abbr> contributions or report any amount using box 16 when the deferred amount is paid to the participant under a prescribed plan during the leave period.</p>
-    <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/deferral.html">Payments related to salary deferral arrangements</a></p>
-</dd>
+
 
 <dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd><p> Report amounts you deducted for your employee's share of the <abbr title="Canada Pension Plan">CPP</abbr> contributions using box 16. If you report an amount in box 16, you have to report pensionable earnings using <a href="#bx_26">box 26</a>. </p>
-<p>Tax-exempt employment income you paid to an employee who is registered, or entitled to be registered under the Indian Act is pensionable and you must deduct <abbr title="Canada Pension Plan">CPP</abbr> contributions.</p>
+<p>Tax-exempt employment income you paid to an employee who is registered, or entitled to be registered under the Indian Act is not pensionable unless you elected to provide <abbr title="Canada Pension Plan">CPP</abbr> coverage to all of your Indian employee on their tax-exempt employment income.</p>
 </dd>
 
 
-<dt>Self-employed fishers, barbers and hairdressers, taxi drivers and drivers of other passenger‑carrying vehicles</dt>
-<dd><p>Report amounts you remitted for the the self-employed worker's share of <abbr title="Canada Pension Plan">CPP</abbr> contributions using box 16. If you report an amount in box 16, you have to report pensionable earnings using <a href="#bx_26">box 26</a>. </p>
-</dd>
+<dt>Detached employee - Social security agreement</dt>
+<dd> <p>Report the amount you are paying for your employee <abbr title="Canada Pension Plan">CPP</abbr> contributions using box 16 if box 10 shows their province of employment is other than Quebec.</p>
 
-<dt>Province of employment outside Canada - Detached employee</dt>
-<dd> <p>Report the amount you deducted for your employee's share of the <abbr title="Canada Pension Plan">CPP</abbr> contributions using box 16 if box 10 shows their province or territory of employment is other than Quebec.</p>
       </dd>
 
 <dt>Contribution to <abbr title="Canada Pension Plan">CPP</abbr> and <abbr title="Quebec Pension Plan">QPP</abbr> during the same year</dt>
@@ -586,7 +579,7 @@
 </li>
 
 <li class="code-num"><details><summary ><span class="label label-warning">Slips filed for calendar year 2024 and after</span> Box 16A – Employee's second CPP (CPP2) contributions <span class="label label-info">Jeremiah</span></summary>	
-<p id="bx_16a">For T4 slips filed for calendar year 2024 and after, report the amount of <abbr title="Second Canada Pension Plan">CPP2</abbr> contributions you deducted from your employee in box 16A if you enter in <a href="#bx_10">box 10</a> that your employee worked in a province other than Quebec.</p>
+<p id="bx_16a">For T4 slips filed for calendar year 2024 and after, report the amount of <abbr title="Second Canada Pension Plan">CPP2</abbr> contributions you deducted from your employee in box 16A if you enter in <a href="#bx_10">box 10</a> that your employee had a province of employment other than Quebec.</p>
 
  <h4>Specific situations</h4>
 <dl class="dl-horizontal">
