--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -535,6 +535,7 @@
 <dd> <p><strong>Do not</strong> report <abbr title="Second Canada Pension Plan">CPP2</abbr> contributions using box 16, use <a href="#bx_16a">box 16a</a>.</p>
      </dd>
 
+<div id="ajax-over16">
 <dt>Over deductions (overpayment)</dt>
 <dd><p>Report the <strong>total</strong> <abbr title="Canada Pension Plan">CPP</abbr> deductions using box 16 <strong>and</strong> the correct pensionable earnings using <a href="#bx_26">box 26</a> if you overdeducted <abbr title="Canada Pension Plan">CPP</abbr> contributions (overpayment) from your employee and <strong>did not reimburse them</strong>.</p>
             <p>Learn more if you over deducted <abbr title="Canada Pension Plan">CPP</abbr> contributions:</p> 
@@ -552,7 +553,7 @@
 <br>
         </ul>
   </dd>
-
+ </div>
 
 <dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd><p> Report amounts you deducted for your employee's share of the <abbr title="Canada Pension Plan">CPP</abbr> contributions using box 16. If you report an amount in box 16, you have to report pensionable earnings using <a href="#bx_26">box 26</a>. </p>
@@ -578,7 +579,7 @@
             </details>
 </li>
 
-<li class="code-num"><details><summary ><span class="label label-warning">Slips filed for calendar year 2024 and after</span> Box 16A – Employee's second CPP (CPP2) contributions <span class="label label-info">Jeremiah</span></summary>	
+<li class="code-num"><details><summary ><span class="label label-warning">Slips filed for calendar year 2024 and after</span> Box 16A – Employee's second CPP (CPP2) contributions </summary>	
 <p id="bx_16a">For T4 slips filed for calendar year 2024 and after, report the amount of <abbr title="Second Canada Pension Plan">CPP2</abbr> contributions you deducted from your employee in box 16A if you enter in <a href="#bx_10">box 10</a> that your employee had a province of employment other than Quebec.</p>
 
  <h4>Specific situations</h4>
@@ -592,16 +593,15 @@
      </dd>
 
 <dt><abbr title="First Canada Pension Plan">CPP</abbr> contributions</dt>
-<dd> <p><strong>Do not </strong>report any amount using box 16a if your employee has not reached the first maximum contributions, use <a href="#bx_16">box 16</a>.</p>
+<dd> <p><strong>Do not </strong>report any amount using box 16a if your employee has not reached the first maximum earnings ceiling, use <a href="#bx_16">box 16</a>.</p>
      </dd>
 
-<dt>Over or under deductions</dt>
-<dd><p>The reporting is the same if you over deducted or under deducted <abbr title="Second Canada Pension Plan">CPP2</abbr>, use the instruction in <a href="#bx_16">box 16</a>.</p>
-              </dd>
+<div data-ajax-replace="#ajax-over16"></div>
 
 </dl>
-<p>The CRA will provide more instructions by the end of 2023. </p>
+<p>If required, the CRA may need to update the instructions during 2023. </p>
 
+<p>Learn more: <a href="/cra-arc/payroll/calculate/when/learncpp.html">About the deduction of Canada Pension Plan (CPP) contributions</a></p>  
 </details>	    	    
 	</li>
 
