--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -537,7 +537,7 @@
 
 <div id="ajax-over16">
 <dt>Over deductions (overpayment)</dt>
-<dd><p>Report the <strong>total</strong> <abbr title="Canada Pension Plan">CPP</abbr> deductions using box 16 <strong>and</strong> the correct pensionable earnings using <a href="#bx_26">box 26</a> if you overdeducted <abbr title="Canada Pension Plan">CPP</abbr> contributions (overpayment) from your employee and <strong>did not reimburse them</strong>.</p>
+<dd><p>Report the <strong>total</strong> <abbr title="Canada Pension Plan">CPP</abbr> deductions using this box <strong>and</strong> the correct pensionable earnings using <a href="#bx_26">box 26</a> if you overdeducted <abbr title="Canada Pension Plan">CPP</abbr> contributions (overpayment) from your employee and <strong>did not reimburse them</strong>.</p>
             <p>Learn more if you over deducted <abbr title="Canada Pension Plan">CPP</abbr> contributions:</p> 
   <ul> <li><a href="/cra-arc/payroll/calculate/corrections/index.html">Make corrections before filing</a> if you reimbursed them</li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/file-information-returns-slip-summaries/make-corrections-after-filing/correct.html#h-1">Make corrections after filing</a> </li>
@@ -546,7 +546,7 @@
   </dd>
 
 <dt>Under deductions (recovering)</dt>
-<dd><p><strong>Do not </strong>report any recovered amount using box 16 if you under deducted <abbr title="Canada Pension Plan">CPP</abbr> contributions.</p>
+<dd><p><strong>Do not </strong>report any recovered amount using this box if you under deducted <abbr title="Canada Pension Plan">CPP</abbr> contributions.</p>
             <p>Learn more if you under deducted <abbr title="Canada Pension Plan">CPP</abbr> contributions:</p> 
   <ul> <li><a href="/cra-arc/payroll/calculate/corrections/index.html">Make corrections before filing</a> </li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/file-information-returns-slip-summaries/make-corrections-after-filing/correct.html#h-3">Make corrections after filing</a> </li>
@@ -605,8 +605,8 @@
 </details>	    	    
 	</li>
 
-<li class="code-num"><details><summary >Box 17 – Employee's QPP contributions <span class="label label-info">Jeremiah</span></summary>
-         <p id="bx_17">Report amounts you deducted for your employee's share of the Quebec Pension Plan (<abbr title="Quebec Pension Plan">QPP</abbr>) contributions using box 17 if you enter in <a href="#bx_10">box 10</a> that your employee worked in the province of  Quebec. If you report an amount in box 17, you have to report pensionable earnings using <a href="#bx_26">box 26</a>. </p>
+<li class="code-num"><details><summary >Box 17 – Employee's QPP contributions </summary>
+         <p id="bx_17">Report amounts you deducted for your employee's share of the Quebec Pension Plan (<abbr title="Quebec Pension Plan">QPP</abbr>) contributions using box 17 if you enter in <a href="#bx_10">box 10</a> that your employee had a province of employment in Quebec. If you report an amount in box 17, you have to report pensionable earnings using <a href="#bx_26">box 26</a>. </p>
                      
             <p><strong>Do not </strong>report the employer's share of <abbr title="Quebec Pension Plan">QPP</abbr> contributions on the T4 slip.</p>
          
@@ -621,23 +621,12 @@
      </dd>
 
 <dt><abbr title="Second Quebec Pension Plan">QPP2</abbr> contributions</dt>
-<dd> <p><strong>Do not </strong>report any amount using box 17 if your employee has reached the first maximum contributions and you deducted <abbr title="Second Quebec Pension Plan">QPP2</abbr> contributions from your employee, use <a href="#bx_17a">box 17a</a>.</p>
+<dd> <p><strong>Do not </strong>report <abbr title="Second Quebec Pension Plan">QPP2</abbr> contributions using box 17, use <a href="#bx_17a">box 17a</a>.</p>
      </dd>
-
-<dt>Salary deferral arrangements</dt>
-<dd><p>Report amounts you deducted from the participant's gross salary (including deferred amounts) while the person was working of the <abbr title="Quebec Pension Plan">QPP</abbr> contributions using box 17. If you report an amount in box 17, you have to report pensionable earnings using <a href="#bx_26">box 26</a>.</p>
- <p><strong>Do not </strong>deduct <abbr title="Quebec Pension Plan">QPP</abbr> contributions or report any amount using box 16 when the deferred amount is paid to the participant under a prescribed plan during the leave period.</p>
-    <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/deferral.html">Payments related to salary deferral arrangements</a></p>
-</dd>
 
 <dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd><p> Report amounts you deducted for your employee's share of the <abbr title="Quebec Pension Plan">QPP</abbr> contributions using box 17. If you report an amount in box 17, you have to report pensionable earnings using <a href="#bx_26">box 26</a>. </p>
-<p>Tax-exempt employment income you paid to an employee who is registered, or entitled to be registered under the Indian Act is pensionable and you must deduct <abbr title="Quebec Pension Plan">QPP</abbr> contributions.</p>
-</dd>
-
-
-<dt>Self-employed fishers, barbers and hairdressers, taxi drivers and drivers of other passenger‑carrying vehicles</dt>
-<dd> <p>Report amounts you remitted for the the self-employed worker's share of <abbr title="Quebec Pension Plan">QPP</abbr> contributions using box 17. If you report an amount in box 17, you have to report pensionable earnings using <a href="#bx_26">box 26</a>. </p>
+<p>Tax-exempt employment income you paid to an employee who is registered, or entitled to be registered under the Indian Act is not pensionable and you must deduct <abbr title="Quebec Pension Plan">QPP</abbr> contributions.</p>
 </dd>
 
 <dt>Contribution to <abbr title="Canada Pension Plan">CPP</abbr> and <abbr title="Quebec Pension Plan">QPP</abbr> during the same year</dt>
