--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -641,7 +641,7 @@
             </details>  
     </li>
 
-<li class="code-num"><details><summary><span class="label label-warning">Slips filed for calendar year 2024 and after</span> Box 17A – Employee's second QPP (QPP2) contributions <span class="label label-info">Jeremiah</span></summary>
+<li class="code-num"><details><summary><span class="label label-warning">Slips filed for calendar year 2024 and after</span> Box 17A – Employee's second QPP (QPP2) contributions </summary>
 <p id="bx_17a">For T4 slips filed for calendar year 2024 and after, report the amount of <abbr title="Second Quebec Pension Plan">QPP2</abbr> contributions you deducted from your employee in box 17A if you enter in <a href="#bx_10">box 10</a> that your employee worked in the province of Quebec.</p>
 
  <h4>Specific situations</h4>
@@ -655,14 +655,13 @@
      </dd>
 
 <dt><abbr title="First Quebec Pension Plan">QPP</abbr> contributions</dt>
-<dd> <p><strong>Do not </strong>report any amount using box 17a if your employee has not reached the first maximum contributions, use <a href="#bx_17">box 17</a>.</p>
+<dd> <p><strong>Do not </strong>report any amount using box 17a if your employee has not reached the first maximum earnings ceiling, use <a href="#bx_17">box 17</a>.</p>
      </dd>
 
-<dt>Over or under deductions</dt>
-<dd><p>The reporting is the same if you over deducted or under deducted <abbr title="Second Quebec Pension Plan">QPP2</abbr>, use the instruction in <a href="#bx_17">box 17</a>.</p>
-              </dd>
 </dl>
-<p>The CRA will provide more instructions by the end of 2023. </p>
+<p>If required, the CRA may need to update the instructions during 2023. </p>
+
+<p>Learn more: <a href="/cra-arc/payroll/calculate/when/learncpp.html">About the deduction of Canada Pension Plan (CPP) contributions</a></p>  
 </details>           
         </li>
 
