--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -665,7 +665,7 @@
 </details>           
         </li>
 
-<li class="code-num"><details><summary>Box 18 – Employee's EI premiums <span class="label label-info">Jeremiah</span></summary>
+<li class="code-num"><details><summary>Box 18 – Employee's EI premiums </summary>
             <p id="bx_18">Report amounts you deducted for your employee's share of the employment insurance (<abbr title="Employment insurance">EI</abbr>) premiums using box 18. If you report an amount in box 18, you have to report insurable earnings using <a href="#bx_24">box 24</a>. </p>
                       
             <p><strong>Do not </strong>report the employer's share of <abbr title="Employment insurance">EI</abbr> premiums on the T4 slip.</p>
@@ -691,11 +691,6 @@
 <li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/file-information-returns-slip-summaries/make-corrections-after-filing/correct.html#h-3">Make corrections after filing</a> </li>
         </ul>
   </dd>
-<dt>Salary deferral arrangements</dt>
-<dd><p>Report amounts you deducted from the participant's gross salary (including deferred amounts) while the person was working of the <abbr title="Employment insurance">EI</abbr> premiums using box 18. If you report an amount in box 18, you have to report insurable earnings using <a href="#bx_24">box 24</a>.</p>
- <p><strong>Do not </strong>deduct EI premiums or report any amount using box 18 when the deferred amount is paid to the participant under a prescribed plan during the leave period.</p>
-    <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/deferral.html">Payments related to salary deferral arrangements</a></p>
-</dd>
 
 <dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd><p> Report amounts you deducted for your employee's share of the <abbr title="Employment insurance">EI</abbr> premiums using box 18. If you report an amount in box 18, you have to report insurable earnings using <a href="#bx_24">box 24</a>. </p>
@@ -704,11 +699,11 @@
 
 
 <dt>Self-employed fishers, barbers and hairdressers, taxi drivers and drivers of other passenger‑carrying vehicles</dt>
-<dd> <p>Report amounts you remitted for the the self-employed worker's share of <abbr title="Employment insurance">EI</abbr> premiums using box 18. If you report an amount in box 18, you have to report insurable earnings using <a href="#bx_24">box 24</a>. </p>
+<dd> <p>Report amounts you remitted for the self-employed worker's share of <abbr title="Employment insurance">EI</abbr> premiums using box 18. If you report an amount in box 18, you have to report insurable earnings using <a href="#bx_24">box 24</a>. </p>
 </dd>
 
 <dt>Province of employment is Quebec</dt>
-<dd> <p>Report amounts you deducted for your employee's share of the reduced <abbr title="Employment insurance">EI</abbr> premiums using box 18. If you report an amount in box 18, you have to report insurable earnings using <a href="#bx_24">box 24</a>.</p>
+<dd> <p>Report amounts you deducted for your employee's share of <abbr title="Employment insurance">EI</abbr> premiums calculated using the Quebec <abbr title="Employment insurance">EI</abbr> rate using box 18. If you report an amount in box 18, you have to report insurable earnings using <a href="#bx_24">box 24</a>.</p>
       <p>Learn more: <a href="/cra-arc/payroll/calculate/when/eirates.html#tb2">Quebec EI premium rates and maximums</a></p>
  </dd>
 </dl>
