--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -714,8 +714,8 @@
 </li>
 
 
-<li class="code-num">  <details><summary >Box 20 – RPP contributions <span class="label label-info">Jeremiah</span></summary>
-<p id="bx_20">Report the amount you deducted, including instalment interest (for example: interest charged to buy back pensionable service), for your employee's contributions to a registered pension plan (<abbr title="registered pension plan">RPP</abbr>) using box 20. </p>
+<li class="code-num">  <details><summary >Box 20 – RPP contributions </summary>
+<p id="bx_20">Report the amount, including instalment interest (for example: interest charged to buy back pensionable service), your employee contributed to a registered pension plan (<abbr title="registered pension plan">RPP</abbr>) using box 20. </p>
 
  <h4>Specific situation</h4>
 <dl class="dl-horizontal">
@@ -727,7 +727,7 @@
 
 <dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd><p><strong>Do not</strong> report an amount for <abbr title="Registered pension plan">RPP</abbr> contributions relating to tax-exempt income you paid to an employee who is registered, or entitled to be registered under the Indian Act using box 20.</p>
-<p>If you pay taxable or partly tax-exempt employment income, you must prorate the <abbr title="registered pension plan">RPP</abbr> contribution and report this amount using code box 20.</p>
+<p>If you pay taxable or partly tax-exempt employment income, you must prorate the <abbr title="registered pension plan">RPP</abbr> contribution and report the amount related to their taxable income using code box 20.</p>
 <p>Give your employee proof of the amounts of <abbr title="registered pension plan">RPP</abbr> contributions for all tax-exempt income.</p>
 </dd>
 
@@ -736,12 +736,14 @@
 </dd>
 
 <dt><abbr title="Retirement compensation arrangement">RCA</abbr> </dt>
-<dd><p>Report the amount if the employee contributed to a <abbr title="Retirement compensation arrangement">RCA</abbr> using box 20.  </p>
+<dd><p>Report the amount if the employee contributed to a <abbr title="Retirement compensation arrangement">RCA</abbr> using box 20.</p>
+<p><strong>Do not</strong> report amounts that are not deductable.</p>
+
 <p>You <strong>have</strong> to attach a letter informing the employee of the amounts you reported if the amount in box 20 includes <abbr title="registered pension plan">RPP</abbr> and <abbr title="Retirement compensation arrangement">RCA</abbr> contributions.</p>
 </dd>
 
-<dt><abbr title="Registered pension plan">RPP</abbr> </dt>
-<dd><p>Report the amount if your employee contributed to buy <strong>past services</strong> for: </p>
+<dt><abbr title="Registered pension plan">RPP</abbr> past-services contributions </dt>
+<dd><p>Report the amount your employee contributed to a <abbr title="Registered pension plan">RPP</abbr> if the contributions included current <strong>and</strong> past-services contributions for: </p>
 <ul>
             <li>1989 or earlier years while a contributor, using box 20 <strong>and</strong> <a href="#cd_74">code 74</a></li>
             <li>1989 or earlier years while <strong>not</strong> a contributor, using box 20 <strong>and</strong> <a href="#cd_75">code 75</a></li>
