--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -759,8 +759,8 @@
 
 <li class="code-num">
 	<details>
-            <summary id="bx_22">Box 22 – Income tax deducted <span class="label label-info">Jeremiah</span></summary>
-<p>Report the amount of income tax you deducted deducted from your employee using box 22. This includes the federal, provincial (except Quebec), and territorial taxes that apply. </p>
+            <summary id="bx_22">Box 22 – Income tax deducted </summary>
+<p>Report the amount of income tax you deducted from your employee using box 22. This includes the federal, provincial (except Quebec), and territorial taxes that apply. </p>
 
  <h4>Specific situations</h4>
 <dl class="dl-horizontal">
@@ -776,7 +776,7 @@
             </details>
 </li>
 
-<li class="code-num">   <details> <summary >Box 24 – EI insurable earnings <span class="label label-info">Jeremiah</span></summary>
+<li class="code-num">   <details> <summary >Box 24 – EI insurable earnings </summary>
                         <p id="bx_24">Report the <strong>total </strong>amount of insurable earnings using box 24. This is the amount you used to calculate your employee's <abbr title="Employment insurance">EI</abbr> premiums that you reported using <a href="#bx_18">box 18</a>, up to the maximum insurable earnings for the year.</p>
             <p>Report "0" if the employee or the self-employed worker had no insurable earnings and you did not report an amount in box 18.</p>
 		<p>In many situations, boxes 14 and 24 will be the same amount.</p>
@@ -820,8 +820,8 @@
 </li>
 
 <li class="code-num"><details> <summary >Box 26 – CPP/QPP pensionable earnings <span class="label label-danger">TO DO</span></summary>
- <p id="bx_26">Report the <strong>total </strong>amount of pensionable earnings using box 26. This is the amount you used to calculate your employee's <abbr title="Canada Pension Plan">CPP</abbr>/<abbr title="Quebec Pension Plan">QPP</abbr> contributions that you reported using <a href="#bx_16">box 16</a>, <a href="#bx_16a">box 16a</a>, <a href="#bx_17">box 17</a> and <a href="#bx_17a">box 17a</a>, up to the maximum pensionable earnings for the year.</p>
-            <p>Report "0" if the employee or the self-employed worker had no pensionable earnings and you did not report an amount in boxes 16, 16a, 17 or 17a.</p>
+ <p id="bx_26">Report the <strong>total </strong>amount of pensionable earnings using box 26. This is the amount you used to calculate your employee's <abbr title="Canada Pension Plan">CPP</abbr>/<abbr title="Quebec Pension Plan">QPP</abbr> contributions that you reported using <a href="#bx_16">box 16</a>, <a href="#bx_16a">box 16a</a>, <a href="#bx_17">box 17</a> and <a href="#bx_17a">box 17a</a>, up to the maximum pensionable earnings and additional maximum pensionable earnings for the year.</p>
+            <p>Report "0" if the employee had no pensionable earnings and you did not report an amount in boxes 16, 16a, 17 or 17a.</p>
 		<p>In many situations, boxes 14 and 26 will be the same amount.</p>
 
             <h4>Non-cash taxable benefits (including security option benefits)</h4>
@@ -871,8 +871,6 @@
 <dt>No <abbr title="Canada Pension Plan">CPP</abbr>/<abbr title="Quebec Pension Plan">QPP</abbr> contributions deductions required</dt>
 <dd><p><strong>Do not </strong>report amounts paid to your employee for employment, benefits, or other payments that should not have <abbr title="Canada Pension Plan">CPP</abbr>/<abbr title="Quebec Pension Plan">QPP</abbr> contributions deducted using box 26. </p>
 
-<p>The unpaid portion of any earnings from pensionable employment that you did not pay because of your bankruptcy, receivership, or non-payment of remuneration for which the employee has filed a complaint with the federal, provincial, or territorial labour authorities.</p>
-
 <p>Learn more:</p>
 <ul> 
 <li><a href="/cra-arc/payroll/calculate/benefit/index.html">Determine if a benefit is taxable</a></li>
@@ -891,7 +889,7 @@
             </dd>
 
 <dt>Correct deduction errors</dt>
-<dd><p>Report the correct <abbr title="Canada Pension Plan">CPP</abbr> pensionable earnings in box 64. This will reduce unnecessary pensionable and insurable earnings review (PIER) reports for <abbr title="Canada Pension Plan">CPP</abbr> deficiency calculations. For example, if the employee worked both inside and outside of Quebec.</p> 
+<dd><p>Report the correct <abbr title="Canada Pension Plan">CPP</abbr> pensionable earnings in box 26. This will reduce unnecessary pensionable and insurable earnings review (PIER) reports for <abbr title="Canada Pension Plan">CPP</abbr> deficiency calculations. For example, if the employee worked both inside and outside of Quebec.</p> 
     <p>Learn more:</p> 
   <ul> <li><a href="/cra-arc/payroll/calculate/corrections/index.html">Make corrections before filing</a> </li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/file-information-returns-slip-summaries/make-corrections-after-filing/correct.html#h-3">Make corrections after filing</a> </li>
