--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -910,11 +910,11 @@
 <dt><abbr title="Canada Pension Plan">CPP</abbr>/<abbr title="Quebec Pension Plan">QPP</abbr></dt>
 <dd><p id="bx_28"><strong>Do not</strong> use box 28 if you report either of the following:</p>
 <ul><li> Pensionable earnings using <a href="#bx_26">box 26</a></li>
-<li>Retiring allowances using <a href="#cd_66">code 66</a>, <a href="#cd_67">code 67</a> <strong>or</strong> <a href="#cd_69">code 69</a></li>
+<li>Retiring allowances using <a href="#cd_66">code 66</a>, <a href="#cd_67">code 67</a> <strong>or</strong> <a href="#cd_69">code 69</a> and no other type of income</li>
 </ul>
 <br>
 <p>Enter an "X" or a check mark under <abbr title="Canada Pension Plan">CPP</abbr>/<abbr title="Quebec Pension Plan">QPP</abbr> if one of the following apply:</p>
-<ul><li>You <strong>do not</strong> report any amount because you did not deduct <abbr title="Canada Pension Plan">CPP</abbr> or <abbr title="Quebec Pension Plan">QPP</abbr> contributions for the <strong>full</strong> reporting period.</li>
+<ul><li>You <strong>do not</strong> report any amount because you did not have to deduct <abbr title="Canada Pension Plan">CPP</abbr> or <abbr title="Quebec Pension Plan">QPP</abbr> contributions for the <strong>full</strong> reporting period.</li>
 <li>You enter an employment code using <a href="#bx_29">box 29</a></li>
 </ul>
 </dd>
@@ -926,7 +926,7 @@
 
 <dt><abbr title="Provincial parental insurance plan">PPIP</abbr></dt>
 <dd><p><strong>Do not</strong> use box 28 if you report insurable earnings using <a href="#bx_55">box 55</a>.</p>
-<p>Enter an "X" or a check mark under <abbr title="Provincial parental insurance plan">PPIP</abbr> if you <strong>do not</strong> report any amount because you did not deduct <abbr title="Provincial parental insurance plan">PPIP</abbr> premiums for the <strong>full</strong> reporting period.</p>
+<p>Enter an "X" or a check mark under <abbr title="Provincial parental insurance plan">PPIP</abbr> if you <strong>do not</strong> report any amount because you did not have to deduct <abbr title="Provincial parental insurance plan">PPIP</abbr> premiums for the <strong>full</strong> reporting period.</p>
 </dd>
 
 </dl>
