--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1481,15 +1481,27 @@
             </details> 
 			</li>
 
-<li class="code-num"><details><summary>Code 88 – Indian (exempt income) – Self-employment <span class="wb-inv">Keywords: Self-employment income Indians indigenous first nations</span> <span class="label label-info">Jeremiah</span></summary> 
- <p id="cd_88">Report <strong>only</strong> tax-exempt self-employment income you paid to a person who is registered, or entitled to be registered under the Indian Act who is fisher, barber or hairdresser, or taxi driver or driver of other passenger-carrying vehicles using code 88. If you report an amount in code 88, you have to enter the appropriate employment code using <a href="#bx_29">box 29</a>.</p>
+<li class="code-num"><details><summary>Code 88 – Indian (exempt income) – Self-employment <span class="wb-inv">Keywords: Self-employment income Indians indigenous first nations</span> </summary> 
+ <p id="cd_88">Report the tax-exempt part of the self-employment income you paid to a person who is registered, or entitled to be registered under the Indian Act who is a fisher, barber or hairdresser, or taxi driver or driver of other passenger-carrying vehicles using code 88. If you report an amount in code 88, you have to enter the appropriate employment code using <a href="#bx_29">box 29</a>.</p>
 <p><strong>Do not </strong>report this amount in box 14.</p>
  <h4>Specific situations</h4>
 <dl class="dl-horizontal">
 <dt>Partly tax-exempt </dt>
-<dd>Report <strong>only</strong> tax-exempt self-employment income using code 88 <strong>and</strong> the taxable self-employment income using the following appropriate employment code you entered in box 29: <a href="#11">code 11</a>, <a href="#13">code 13</a> or <a href="#17">code 17</a>.</dd>
+<dd><p>Report the tax-exempt part of the self-employment income using code 88 <strong>and</strong> the taxable self-employment income using:</p>
+<ul>
+<li><a href="#78">code 78</a>, <a href="#79">code 79</a> and <a href="#80">code 80</a> for a fisher </li>
+<li><a href="#82">code 82</a> for a taxi driver or driver of other passenger carrying vehicle </li>
+<li><a href="#82">code 83</a> for a barber and hairdresser</li>
+</ul>
+</dd>
 <dt>Fully taxable</dt>
-<dd><strong>Do not</strong> report fully taxable self-employment income using code 88, use the following appropriate employment code you entered in box 29: <a href="#11">code 11</a>, <a href="#13">code 13</a> or <a href="#17">code 17</a>.</dd>
+<dd><p><strong>Do not</strong> report fully taxable self-employment income using code 88, use:</p>
+<ul>
+<li><a href="#78">code 78</a>, <a href="#79">code 79</a> and <a href="#80">code 80</a> for a fisher </li>
+<li><a href="#82">code 82</a> for a taxi driver or driver of other passenger carrying vehicle </li>
+<li><a href="#82">code 83</a> for a barber and hairdresser</li>
+</ul>
+</dd>
 </dl>
           <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/indianact.html">Employee who is registered, or entitled to be registered under the Indian Act</a></p>
             </details> 
