--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1467,15 +1467,15 @@
             </details> 
 			</li>
 
-<li class="code-num"><details><summary>Code 87 – Emergency services volunteer exempt amount <span class="label label-info">Jeremiah</span></summary> 
+<li class="code-num"><details><summary>Code 87 – Emergency services volunteer exempt amount </summary> 
 	<p id="cd_87">Report <strong>only</strong> tax-exempt employment income (up to $1,000) you paid (as a government, a municipality, or a public authority) to a person who performed firefighter or search and rescue duties as a volunteer using code 87.</p>
 <p><strong>Do not </strong>report this amount in box 14.</p>
  <h4>Specific situations</h4>
 <dl class="dl-horizontal">
 <dt>Employment income of $1,000 or more</dt>
-<dd>Report <strong>only </strong> tax-exempt employment income (up to $1,000) using code 87 <strong>and</strong> the taxable employment income ($1,000 or more) using <a href="#bx_14">box 14</a>.  </dd>
-<dt>Person does not meet all conditions for the exemption</dt>
-<dd><strong>Do not </strong>report the employment income if your employee <strong>does not</strong> meet all conditions for the exemption using code 87, use <a href="#bx_14">box 14</a>.</dd>
+<dd>Report <strong>only </strong> the tax-exempt amount (up to $1,000) using code 87 <strong>and</strong> the remaining taxable employment income using <a href="#bx_14">box 14</a>.  </dd>
+<dt>Person does not qualify for the exemption</dt>
+<dd><strong>Do not</strong> report an amount using code 87 if you employed the volunteer for the same or similar duties, use <a href="#bx_14">box 14</a> to report the total amount.</dd>
 </dl>
             <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/emergency.html">Payments to emergency services volunteers</a></p>
             </details> 
@@ -1491,7 +1491,7 @@
 <ul>
 <li><a href="#78">code 78</a>, <a href="#79">code 79</a> and <a href="#80">code 80</a> for a fisher </li>
 <li><a href="#82">code 82</a> for a taxi driver or driver of other passenger carrying vehicle </li>
-<li><a href="#82">code 83</a> for a barber and hairdresser</li>
+<li><a href="#83">code 83</a> for a barber and hairdresser</li>
 </ul>
 </dd>
 <dt>Fully taxable</dt>
@@ -1499,7 +1499,7 @@
 <ul>
 <li><a href="#78">code 78</a>, <a href="#79">code 79</a> and <a href="#80">code 80</a> for a fisher </li>
 <li><a href="#82">code 82</a> for a taxi driver or driver of other passenger carrying vehicle </li>
-<li><a href="#82">code 83</a> for a barber and hairdresser</li>
+<li><a href="#83">code 83</a> for a barber and hairdresser</li>
 </ul>
 </dd>
 </dl>
