--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1372,10 +1372,10 @@
             </details> 
 			</li>
 
-<li class="code-num"><details> <summary>Code 77 – Workers' compensation benefits repaid to the employer <span class="label label-info">Jeremiah</span></summary> 
-            <p id="cd_77">Report the amount of workers' compensation benefits using code 77 where:</p>
+<li class="code-num"><details> <summary>Code 77 – Workers' compensation benefits repaid to the employer </summary> 
+            <p id="cd_77">Report the amount of workers' compensation benefits repaid to the employer using code 77 where:</p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
-<li class="cnjnctn-col">You previously paid your employee the workers' compensation amount and you reported it as an employment income on their T4 slip</li>
+<li class="cnjnctn-col">You previously paid your employee the workers' compensation amount and you reported it as employment income on their T4 slip</li>
 <li class="cnjnctn-col">You were reimbursed by the workers' compensation board (WCB) for the worker's compensation amount you paid to your employee </li>
 </ul>
 <p> This allows your employee to claim a deduction as other employment expenses on their income tax and benefit returns. </p>
@@ -1385,7 +1385,7 @@
             </details>
 </li>
 		
-<li class="code-num"><details><summary >Code 78 – Fishers – Gross income <span class="label label-info">Jeremiah</span></summary> 
+<li class="code-num"><details><summary >Code 78 – Fishers – Gross income </summary> 
             <p id="cd_78">Report the gross income you paid to a fisher using code 78. If you report an amount in code 78, you have to enter the employment code 17 using <a href="#17">box 29</a>. </p>
 
 <h4>Specific situations</h4>
@@ -1401,7 +1401,7 @@
             </details> 
 			</li>
 
-<li class="code-num"><details><summary >Code 79 – Fishers – Net partnership amount <span class="label label-info">Jeremiah</span></summary> 
+<li class="code-num"><details><summary >Code 79 – Fishers – Net partnership amount </summary> 
             <p id="cd_79">Report the net partnership amount if you paid a type 1 fisher using code 79. If you report an amount in code 79, you have to report the gross income using <a href="#cd_78">code 78</a>.</p>
 
 <h4>Specific situations</h4>
@@ -1416,7 +1416,7 @@
             </details> 
 			</li>
 
-<li class="code-num"><details><summary>Code 80 – Fishers – Shareperson amount <span class="label label-info">Jeremiah</span></summary> 
+<li class="code-num"><details><summary>Code 80 – Fishers – Shareperson amount </summary> 
             <p id="cd_80">Report the shareperson amount if you paid a type 2 fisher using code 80. If you report an amount in code 80, you have to report the gross income using <a href="#cd_78">code 78</a>.</p>
           <h4>Specific situations</h4>
 <dl class="dl-horizontal">
@@ -1437,14 +1437,14 @@
              </details> 
 			</li>
 
-<li class="code-num"><details> <summary>Code 82 – Taxi drivers and drivers of other passenger-carrying vehicles – Gross income <span class="label label-info">Jeremiah</span></summary> 
+<li class="code-num"><details> <summary>Code 82 – Taxi drivers and drivers of other passenger-carrying vehicles – Gross income </summary> 
 <p id="cd_82">Report the gross income you paid to a self-employed taxi drivers and drivers of other passenger-carrying vehicles using code 82. If you report an amount in code 82, you have to enter the employment code 12 using <a href="#12">box 29</a>.</p>
 <p><strong>Do not </strong>report this amount in box 14.</p>  
 
             </details> 
 			</li>
 
-<li class="code-num"><details> <summary>Code 83 – Barbers or hairdressers – Gross income <span class="label label-info">Jeremiah</span></summary> 
+<li class="code-num"><details> <summary>Code 83 – Barbers or hairdressers – Gross income </summary> 
 <p id="cd_83">Report the gross income you paid to a self-employed barbers or hairdressers using code 83. If you report an amount in code 83, you have to enter the employment code 13 using <a href="#13">box 29</a>.</p>
 <p><strong>Do not </strong>report this amount in box 14.</p>  
 
@@ -1452,7 +1452,7 @@
             </details> 
 			</li>
 
-<li class="code-num"><details><summary>Code 85 – Employee-paid premiums for private health services plans <span class="label label-info">Jeremiah</span></summary> 
+<li class="code-num"><details><summary>Code 85 – Employee-paid premiums for private health services plans </summary> 
  <p id="cd_85">Report the premiums that your employee paid to a private health services plans using code 85.</p>
 <p>The use of code 85 is optional. If you do not use this code, the CRA may ask the recipient to provide supporting documents.</p>
 <p><strong>Do not </strong>report this amount in box 14.</p>
@@ -1461,7 +1461,7 @@
             </details> 
 			</li>
 
-<li class="code-num"><details><summary>Code 86 – Security options election <span class="label label-info">Jeremiah</span></summary> 
+<li class="code-num"><details><summary>Code 86 – Security options election </summary> 
             <p id="cd_86">Report the value of the taxable benefit received from qualified securities if your employee is eligible for the option benefit deduction under 110(1)(d) and you made an election under 110(1.1) to not claim the cash-out as an expense using code 86. If you report an amount in code 86, you have to report the total value of the security options benefit using <a href="#cd_38">code 38</a>. </p>
    <p><strong>Do not </strong>report this amount in box 14. </p>
             </details> 
