--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -667,7 +667,7 @@
 </li>
 <li class="code-num">
  <details> <summary>Code 032 –&nbsp;Registered pension plan contributions (past service) </summary> 
-  <p id="cd032">Report the contributions a former employee made to buy past service using code 032.</p> 
+  <p id="cd032">Report the contributions to a <abbr title="Registered pension plan">RPP</abbr> a former employee made to buy past service using code 032.</p> 
  <h4>Specific situations </h4>
 <p> The plan administrator usually fills out the T4A slip when an employer-employee relationship no longer exists. You must include any instalment interest paid for past service contributions. Instalment interest is the portion of contributions that represents the amount charged to buy past service over time. </p> 
 <dl class="dl-horizontal">
@@ -914,7 +914,7 @@
 </li>
 <li class="code-num">
  <details>  <summary>Code 126 – Pre-1990 past service contributions while a contributor </summary> 
-  <p id="cd126">Report the amount for past service contributions for 1989 or earlier years while a contributor using code 126  <strong>and</strong> <a href="#cd032">code 032</a></p> 
+  <p id="cd126">Report the amount for past service contributions to a <abbr title="Registered pension plan">RPP</abbr> for 1989 or earlier years while a contributor using code 126  <strong>and</strong> <a href="#cd032">code 032</a></p> 
 
 
 </details> 
@@ -1068,7 +1068,7 @@
  </li>
 <li class="code-num">
 <details>  <summary>Code 162 – Pre-1990 Past services contributions while not a contributor </summary> 
-<p id="cd162">Report the amount for past service contributions for 1989 or earlier years while not a contributor using code 162  <strong>and</strong> <a href="#cd032">code 032</a></p> 
+<p id="cd162">Report the amount for past service contributions to a <abbr title="Registered pension plan">RPP</abbr> for 1989 or earlier years while not a contributor using code 162  <strong>and</strong> <a href="#cd032">code 032</a></p> 
 
  </details> 
 </li>
