--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1362,13 +1362,13 @@
             </details> 
 			</li>
 
-<li class="code-num"><details><summary>Code 74 – Past service contributions for 1989 or earlier years while a contributor <span class="label label-info">Jeremiah</span></summary> 
- <p id="cd_74">Report amounts for past service contributions for 1989 or earlier years while the employee was a contributor using code 74  <strong>and</strong> <a href="#bx_20">box 20</a>.</p> 
+<li class="code-num"><details><summary>Code 74 – Past service contributions for 1989 or earlier years while a contributor </summary> 
+ <p id="cd_74">Report amounts for past service contributions to a <abbr title="Registered pension plan">RPP</abbr> for 1989 or earlier years while the employee was a contributor using code 74  <strong>and</strong> <a href="#bx_20">box 20</a>.</p> 
             </details> 
 			</li>
 
-<li class="code-num"> <details>  <summary>Code 75 – Past service contributions for 1989 or earlier years while not a contributor <span class="label label-info">Jeremiah</span></summary> 
-          <p id="cd_75">Report amounts for past service contributions for 1989 or earlier years while the employee was not a contributor using code 75 <strong>and</strong> <a href="#bx_20">box 20</a>.</p> 
+<li class="code-num"> <details>  <summary>Code 75 – Past service contributions for 1989 or earlier years while not a contributor </summary> 
+          <p id="cd_75">Report amounts for past service contributions to a <abbr title="Registered pension plan">RPP</abbr> for 1989 or earlier years while the employee was not a contributor using code 75 <strong>and</strong> <a href="#bx_20">box 20</a>.</p> 
             </details> 
 			</li>
 
